# binary-analyzer-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binary_analyzer.cpp
.github/workflows/: build.yml
docs/: API.md
examples/: README.md
